--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,9 @@ name: 'Assign Reviewers to PR'
 description: 'GitHub Action to assign PR reviewers'
 author: 'itsOliverBott'
 inputs:
+  token:
+    description: 'GitHub token for repository access'
+    required: true
   users:
     description: 'Comma-separated users to be added as reviewers (example: "itsOliverBott, SantaClaus, b4tman, sp0derman")'
     required: true
